apps/amt/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: amt
    spec:
      automountServiceAccountToken: false
      containers:
        - image: amt-image
          name: amt
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 700m
              memory: 512Mi
              ephemeral-storage: "2Gi"
            requests:
              cpu: 500m
              memory: 256Mi
              ephemeral-storage: "2Gi"
          livenessProbe:
            initialDelaySeconds: 20
            httpGet:
              path: /health/live
              port: 8000
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
      imagePullSecrets:
        - name: minbzk-registry
