apps/amt/base/service-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-minio
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: minio
  type: ClusterIP
