apps/amt/base/ingress-pgadmin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-pgadmin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: set-in-overlay
      http:
        paths:
          - backend:
              service:
                name: svc-pgadmin
                port:
                  number: 5050
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - set-in-overlay
      secretName: amt-pgadmin-tls
